--- a/HomeAssistant/HomeAssistant.API/HomeAssistant.API.csproj
+++ b/HomeAssistant/HomeAssistant.API/HomeAssistant.API.csproj
@@ -7,6 +7,7 @@
     <InvariantGlobalization>true</InvariantGlobalization>
     <UserSecretsId>84a9b4ce-6323-4917-87eb-4316a1e1d47b</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
