--- a/HomeAssistant/HomeAssistant.BusinessLogic/HomeAssistant.BusinessLogic.csproj
+++ b/HomeAssistant/HomeAssistant.BusinessLogic/HomeAssistant.BusinessLogic.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Contracts\" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HomeAssistant.Domain\HomeAssistant.Domain.csproj" />
   </ItemGroup>
 
 </Project>
