--- a/HomeAssistant/HomeAssistant.MQTT/HomeAssistant.MQTT.csproj
+++ b/HomeAssistant/HomeAssistant.MQTT/HomeAssistant.MQTT.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="MQTTnet" Version="4.3.3.952" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HomeAssistant.DI\HomeAssistant.DI.csproj" />
+  </ItemGroup>
+
 </Project>
