update relay status from MQTT + get all relays endpoint

--- a/HomeAssistant/HomeAssistant.DI/HomeAssistant.DI.csproj
+++ b/HomeAssistant/HomeAssistant.DI/HomeAssistant.DI.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\HomeAssistant.BusinessLogic\HomeAssistant.BusinessLogic.csproj" />
+    <ProjectReference Include="..\HomeAssistant.Services\HomeAssistant.Services.csproj" />
   </ItemGroup>
 
 </Project>
