mongodb version that works on raspberry pi

--- a/HomeAssistant/HomeAssistant.API/Dockerfile
+++ b/HomeAssistant/HomeAssistant.API/Dockerfile
@@ -11,11 +11,11 @@ COPY ["HomeAssistant.API/HomeAssistant.API.csproj", "HomeAssistant.API/"]
 RUN dotnet restore "./HomeAssistant.API/./HomeAssistant.API.csproj"
 COPY . .
 WORKDIR "/src/HomeAssistant.API"
-RUN dotnet build "./HomeAssistant.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "./HomeAssistant.API.csproj" -c $BUILD_CONFIGURATION -o /app/build --no-restore
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./HomeAssistant.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./HomeAssistant.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false --no-build
 
 FROM base AS final
 WORKDIR /app
