--- a/HomeAssistant/docker-compose.yml
+++ b/HomeAssistant/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - homeassistant.mongodb
 
   homeassistant.mongodb:
-    image: mongo:7.0
+    image: mongo:4.4.18   # version that works on raspberry pi 4
     restart: always
     ports:
       - '27017:27017'
