--- a/HomeAssistant/HomeAssistant.Services/HomeAssistant.Services.csproj
+++ b/HomeAssistant/HomeAssistant.Services/HomeAssistant.Services.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.23.1" />
+    <PackageReference Include="MQTTnet" Version="4.3.3.952" />
   </ItemGroup>
 
   <ItemGroup>
